tests/baselines/reference/parserNotRegex1.errors.txt
tests/cases/conformance/parser/ecmascript5/parserNotRegex1.ts(1,7): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/parserNotRegex1.ts(3,5): error TS1108: A 'return' statement can only be used within a function body.


==== tests/cases/conformance/parser/ecmascript5/parserNotRegex1.ts (2 errors) ====
      if (a.indexOf(-(4/3)))      // We should not get a regex here because of the / in the comment.
          ~
!!! error TS2304: Cannot find name 'a'.
      {
        return true;
        ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
      }